# PulseCLI

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pulse.yaml  pulse.yaml.example  pyproject.toml  requirements.txt
pulse/: cli.py  config.py  context.py  dictionary.py  dispatcher.py  engine.py  events.py  frontmost_app.py  gestures.py  hud.py  learning.py  menu_bar.py  myo_reader.py  prompt_context.py  target_picker.py  training.py  voice_recorder.py  window_targets.py
pulse/emg/: features.py
pulse/handlers/: action_trigger.py  keyboard_trigger.py  logger.py  recipe_handler.py  voice_trigger.py  window_navigator.py
scripts/: collect.py  train.py
tests/: conftest.py  test_config.py  test_dictionary.py  test_learning.py  test_prompt_context.py  test_recipe.py  test_training.py  test_window_targets.py
